<resources>
    <string name="app_name">OnlineStoreApp</string>
    <string name="sign_in">Вход</string>
    <string name="placeholder_name">Имя</string>
    <string name="placeholder_last_name">Фамилия</string>
    <string name="placeholder_phone_number">Номер телефона</string>
    <string name="sign_in_button">Войти</string>
    <string name="description">Нажимая кнопку “Войти”, Вы принимаете\n условия программы лояльности</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Каталог</string>
    <string name="filter">Фильтры</string>
    <string name="tag">Смотреть все</string>

    <string-array name="sort_options">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </string-array>

</resources>