<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.SignInActivity">

    <TextView
        android:id="@+id/tvSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/black"
            android:hint="@string/placeholder_name"
            android:background="@drawable/placeholder_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/black"
            android:hint="@string/placeholder_last_name"
            android:background="@drawable/placeholder_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tietFirstName"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/sfprodisplay_regular"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="phone"
            android:digits="1234567890 +()-"
            android:textColor="@color/black"
            android:hint="@string/placeholder_phone_number"
            android:background="@drawable/placeholder_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tietLastName"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btPostOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tietPhoneNumber"
            android:background="@drawable/placeholder_background"
            android:backgroundTint="@color/light_pink"
            android:text="@string/sign_in_button"
            style="@style/MineCustomTabText"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:textSize="14sp"
            android:fontFamily="@font/sfprodisplay_medium"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="center"
        android:layout_marginBottom="36dp"
        android:textColor="@color/second_light_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>